add-exports in tests